--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,15 @@
-# macOS
+# Development notes (not for main branch)
+.notes/
+
+# OS files
 .DS_Store
-.AppleDouble
-.LSOverride
+Thumbs.db
 
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# IDE
+# Editor files
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
-
-# Node.js (if we use any build tools later)
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Test coverage
-coverage/
-.nyc_output/
 
 # Logs
-logs/
 *.log
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Build output
-dist/
-build/
-
-# Temporary files
-*.tmp
-*.temp
-.cache/
