--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
     "markdown.validate.ignoredLinks": [
         "*.md#*"  // Ignore local markdown anchor links
     ],
-    
+    // Enable auto preview for markdown files
+    "markdown.extension.preview.autoShowPreviewToSide": true,
+
     // Markdownlint configuration - more permissive defaults
     "markdownlint.config": {
         // Allow line length flexibility for documentation
